
    <resources>
        <string name="app_name">BrewByte</string>
        <string name="login">Login</string>
        <string name="email">Email</string>
        <string name="password">Password</string>
        <string name="register">Register</string>
        <string name="username">Username</string>
        <string name="confirm_password">Confirm Password</string>
        <string name="default_web_client_id">
             878430010192-qvg3khicsij2uu871veacqa57b8he79k.apps.googleusercontent.com
        </string>
        <string name="back_arrow">← Back</string>
        <string name="order_history">Order History</string>
        <string name="loading">Loading...</string>
        <string name="back">Back</string>
        <string name="find_brewbyte">Find BrewByte</string>
        <string name="my_location">My location</string>
        <string name="satellite">Satellite</string>
        <string name="directions">Directions</string>
        <string name="mock_location">Mock location</string>





            <string name="menu_title">BrewByte Menu</string>

            <string name="item_cappuccino">Cappuccino</string>
            <string name="item_tea">Tea</string>
            <string name="item_sandwich">Sandwich</string>
            <string name="item_pastry">Pastry</string>

            <string name="price_cappuccino">$4.50</string>
            <string name="price_tea">$3.00</string>
            <string name="price_sandwich">$5.50</string>
            <string name="price_pastry">$3.99</string>

            <string name="btn_add">ADD</string>
            <string name="btn_cart">View Cart</string>
            <string name="btn_find_us">Find Us on Map</string>
            <string name="btn_open_camera">Open Camera</string>

            <string name="logo_desc">BrewByte logo</string>

        <string name="back_button">Back</string>
        <string name="order_history_title">Order History</string>
        <string name="previous_orders_title">Previous Orders</string>


        <string name="cart_title">Your Cart</string>
        <string name="cart_empty">Your cart is empty</string>
        <string name="cart_total_default">Total: $0.00</string>
        <string name="btn_clear_cart">Clear Cart</string>
        <string name="btn_checkout">Checkout</string>

    </resources>
